overflow bug fixes

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body{
 .main-content{
     min-width: 395px;
     max-width: 720px;
+    overflow: hidden;
 }
 
 #header-panel{
@@ -66,12 +67,11 @@ body{
 }
 
 .slider, .overlay::before, .layer-overlay::before{
-    height: 70vh;
-    width: 100%;
+    height: 80vh;
 }
 
 .slider{
-    height: calc(70vh - 1px);
+    height: calc(80vh - 1px);
     background-image: url("img/Lisa.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -82,7 +82,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    height: 60vh;
+    height: 70vh;
     width: 100%;
 }
 
@@ -109,7 +109,7 @@ body{
     display: block;
     position: absolute;
     background: #00000080;
-    height: calc(70vh - 1px);
+    height: calc(80vh - 1px);
 }
 
 .cover{
@@ -440,6 +440,9 @@ small{
     .photo-grid {
         grid-template-columns: repeat(2, 1fr);
     }
+    .slider, .overlay::before, .layer-overlay::before{
+        width: 720px;
+    }
 }
 
 @media (width <= 720px){
@@ -448,6 +451,9 @@ small{
     }
     .photo-grid {
         grid-template-columns: repeat(1, 1fr);
+    }
+    .slider, .overlay::before, .layer-overlay::before{
+        width: 100%;
     }
 }
 
